log
Thu Apr 21 15:35:19 UTC 2022: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:5: error: ‘b’ undeclared (first use in this function)
     b
     ^
treemap.c:40:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:42:5: error: expected ‘;’ before ‘return’
     return NULL;
     ^~~~~~
treemap.c: In function ‘searchTreeMap’:
treemap.c:73:3: error: unknown type name ‘Treenode’; did you mean ‘TreeNode’?
   Treenode *aux = tree->root;
   ^~~~~~~~
   TreeNode
treemap.c:73:19: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   Treenode *aux = tree->root;
                   ^~~~
treemap.c:75:35: error: request for member ‘pair’ in something not a structure or union
     if(tree -> lower_than(key, aux->pair->key)){
                                   ^~
treemap.c:76:17: error: request for member ‘left’ in something not a structure or union
       aux = aux -> left;
                 ^~
treemap.c:77:36: error: request for member ‘pair’ in something not a structure or union
     }else if(tree -> lower_than(aux->pair->key,key)){
                                    ^~
treemap.c:78:17: error: request for member ‘right’ in something not a structure or union
       aux = aux -> right;
                 ^~
treemap.c:80:17: error: request for member ‘pair’ in something not a structure or union
       return aux->pair;
                 ^~
treemap.c: In function ‘createTreeMap’:
treemap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
c2b0806
